[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "openenv-email-triage"
version = "1.0.0"
description = "A real-world customer support email triage OpenEnv environment"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "openenv-core>=0.2.0",
    "fastapi==0.111.0",
    "uvicorn[standard]==0.29.0",
    "pydantic==2.7.1",
    "openai==1.30.1",
    "requests==2.32.2",
    "pyyaml==6.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "httpx>=0.27.0",
]

[project.scripts]
server    = "server.app:main"
inference = "inference:main"

[tool.setuptools.packages.find]
where   = ["."]
include = ["env*", "graders*", "server*"]

[tool.openenv]
name        = "email-triage-env"
version     = "1.0.0"
entry_point = "server.app:main"
framework   = "fastapi"
port        = 7860
spec        = "openenv.yaml"

[tool.openenv.modes.server]
entry_point = "server.app:main"
port        = 7860

[tool.openenv.modes.inference]
entry_point = "inference:main"
script      = "inference.py"
